[package]
name = "port-scanner"
version = "0.1.0"
description = "Scan listening ports on macOS and show which app owns each one"
authors = ["anuwatttttt"]
edition = "2021"

[lib]
name = "port_scanner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
